Add Project function

--- a/public/summary.html
+++ b/public/summary.html
@@ -124,7 +124,7 @@
     
     <!-- PDF生成用の一時的な隠しコンテナ -->
     <!-- html2canvasがDOM要素をキャプチャしやすいように、固定配置で画面外に配置し、サイズを明示的に指定 -->
-    <div id="pdf-hidden-container" style="position: fixed; top: -9999px; left: -9999px; width: 210mm; height: 297mm; overflow: hidden; background-color: white; border: 1px solid blue;"></div>
+    <div id="pdf-hidden-container" style="position: fixed; top: -9999px; left: -9999px; width: 210mm; background-color: white; border: 1px solid blue;"></div>
 
     <!-- html2pdf.js ライブラリを読み込み -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
