--- a/public/summary.html
+++ b/public/summary.html
@@ -124,7 +124,7 @@
     
     <!-- PDF生成用の一時的な隠しコンテナ -->
     <!-- html2canvasがDOM要素をキャプチャしやすいように、固定配置で画面外に配置し、サイズを明示的に指定 -->
-    <div id="pdf-hidden-container" style="position: fixed; top: 0; left: 0; width: 210mm; height: 297mm; background-color: white; border: 1px solid blue; opacity: 0; pointer-events: none;"></div>
+    <div id="pdf-hidden-container" style="position: fixed; top: 0; left: 0; width: 210mm; height: 297mm; background-color: white; border: 1px solid blue; visibility: hidden; pointer-events: none;"></div>
 
     <!-- html2pdf.js ライブラリを読み込み -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -912,8 +912,8 @@
             };
 
             try {
-                // コンテナを一時的に不透明にする
-                pdfHiddenContainer.style.opacity = '1';
+                // コンテナを一時的に見える状態にする
+                pdfHiddenContainer.style.visibility = 'visible';
                 // html2pdfの処理をPromiseとして扱い、完了後にコンテナのコンテンツをクリア
                 await new Promise(resolve => setTimeout(resolve, 1000)); // 1000ミリ秒の遅延
                 await html2pdf().from(pdfHiddenContainer).set(pdfOptions).save();
@@ -922,9 +922,9 @@
                 console.error("PDF生成中にエラーが発生しました:", error);
                 showStatus(`PDFの生成中にエラーが発生しました: ${error.message}。コンソールを確認してください。`, true, 'summary-status');
             } finally {
-                // 処理が完了したら（成功/失敗にかかわらず）隠しコンテナのコンテンツをクリアし、透明に戻す
+                // 処理が完了したら（成功/失敗にかかわらず）隠しコンテナのコンテンツをクリアし、再び隠す
                 pdfHiddenContainer.innerHTML = '';
-                pdfHiddenContainer.style.opacity = '0';
+                pdfHiddenContainer.style.visibility = 'hidden';
             }
         }
 
