--- a/public/summary.html
+++ b/public/summary.html
@@ -122,10 +122,6 @@
         </div>
     </div>
     
-    <!-- PDF生成用の一時的な隠しコンテナ -->
-    <!-- html2canvasがDOM要素をキャプチャしやすいように、固定配置で画面外に配置し、サイズを明示的に指定 -->
-    <div id="pdf-hidden-container" style="display: none; background-color: white; border: 1px solid blue; pointer-events: none;"></div>
-
     <!-- html2pdf.js ライブラリを読み込み -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <!-- Chart.js ライブラリを読み込み -->
@@ -893,55 +889,56 @@
 
             console.log("PDF Content HTML:", pdfContentHtml); // デバッグ用にHTML内容を出力
 
-            // 固定で配置された隠しコンテナを取得し、HTMLコンテンツを注入
-            const pdfHiddenContainer = document.getElementById('pdf-hidden-container');
-            pdfHiddenContainer.innerHTML = pdfContentHtml;
+            // Create a temporary iframe for PDF rendering
+            const iframe = document.createElement('iframe');
+            iframe.style.position = 'absolute';
+            iframe.style.top = '-9999px'; // Place off-screen
+            iframe.style.left = '-9999px'; // Place off-screen
+            iframe.style.width = '210mm'; // A4 width
+            iframe.style.height = '297mm'; // A4 height
+            iframe.style.border = '1px solid blue'; // Debug border for the iframe itself
+            iframe.style.backgroundColor = 'white';
+            iframe.style.zIndex = '-1'; // Ensure it doesn't interfere with user interaction
+            document.body.appendChild(iframe);
 
-            // PDFを生成
-            const pdfOptions = {
-                margin: [10, 10, 10, 10], // 上、左、下、右の余白 (mm)
-                filename: `稼働報告書_${selectedMonth}_${projectCode}.pdf`,
-                image: { type: 'jpeg', quality: 0.98 },
-                html2canvas: { 
-                    scale: 2, // レンダリングスケールを上げる (解像度向上)
-                    logging: true, // html2canvasのログを有効化
-                    useCORS: true, // クロスオリジン画像を許可
-                    allowTaint: true // キャンバスの汚染を許可
-                },
-                jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-            };
+            // Get the iframe's document
+            const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
 
             try {
-                // コンテナを一時的に表示状態にする
-                pdfHiddenContainer.style.display = 'block';
-                pdfHiddenContainer.style.position = 'absolute'; // 画面の左上に配置
-                pdfHiddenContainer.style.left = '0';
-                pdfHiddenContainer.style.top = '0';
-                pdfHiddenContainer.style.zIndex = '9999'; // 最前面に
-                pdfHiddenContainer.style.width = '210mm'; // A4幅を再設定
-                pdfHiddenContainer.style.height = '297mm'; // A4高さを再設定
+                // Write the HTML content into the iframe
+                iframeDoc.open();
+                iframeDoc.write('<!DOCTYPE html><html><head><title>PDF Content</title></head><body>' + pdfContentHtml + '</body></html>');
+                iframeDoc.close();
 
-                // requestAnimationFrame を2回使用して、ブラウザが完全にレンダリングするのを待つ
-                await new Promise(resolve => requestAnimationFrame(() => {
-                    requestAnimationFrame(resolve);
-                }));
+                // Wait for the iframe content to load and render
+                await new Promise(resolve => {
+                    // Use iframe load event for initial content load
+                    iframe.onload = () => {
+                        // Then use requestAnimationFrame twice to ensure rendering is complete
+                        requestAnimationFrame(() => {
+                            requestAnimationFrame(resolve);
+                        });
+                    };
+                    // If iframe is already loaded (e.g., due to quick execution), resolve immediately
+                    if (iframe.contentWindow.document.readyState === 'complete') {
+                        requestAnimationFrame(() => {
+                            requestAnimationFrame(resolve);
+                        });
+                    }
+                });
 
-                await html2pdf().from(pdfHiddenContainer).set(pdfOptions).save();
+                // Now, capture the content from within the iframe
+                await html2pdf().from(iframeDoc.querySelector('.pdf-container')).set(pdfOptions).save();
                 showStatus("PDFを正常に生成しました。", false, 'summary-status');
+
             } catch (error) {
                 console.error("PDF生成中にエラーが発生しました:", error);
                 showStatus(`PDFの生成中にエラーが発生しました: ${error.message}。コンソールを確認してください。`, true, 'summary-status');
             } finally {
-                // 処理が完了したら（成功/失敗にかかわらず）隠しコンテナのコンテンツをクリアし、再び非表示にする
-                pdfHiddenContainer.innerHTML = '';
-                pdfHiddenContainer.style.display = 'none';
-                // スタイルをリセットして、次回のためにクリーンな状態にする
-                pdfHiddenContainer.style.position = '';
-                pdfHiddenContainer.style.left = '';
-                pdfHiddenContainer.style.top = '';
-                pdfHiddenContainer.style.zIndex = '';
-                pdfHiddenContainer.style.width = ''; // 幅もリセット
-                pdfHiddenContainer.style.height = ''; // 高さもリセット
+                // Clean up: remove the iframe from the DOM
+                if (iframe.parentNode) {
+                    iframe.parentNode.removeChild(iframe);
+                }
             }
         }
 
