--- a/public/summary.html
+++ b/public/summary.html
@@ -22,7 +22,9 @@
                 <header class="flex flex-col sm:flex-row justify-between items-center gap-4">
                     <h2 class="text-2xl sm:text-3xl font-bold text-gray-800">稼働実績サマリー</h2>
                     <div class="flex flex-wrap gap-2">
+                        <!-- グラフ表示/非表示ボタン -->
                         <button id="toggle-chart-btn" class="btn bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded">稼働グラフを表示</button>
+                        <!-- 収支グラフ表示/非表示ボタンを追加 -->
                         <button id="toggle-revenue-chart-btn" class="btn bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded">収支グラフを表示</button>
                     </div>
                 </header>
@@ -45,23 +47,30 @@
                     <button id="load-summary-btn" class="btn bg-main hover:bg-main-dark text-white font-bold py-2 px-4 rounded md:col-span-2">サマリーを読み込む</button>
                 </div>
 
+                <!-- 稼働グラフ表示エリア -->
                 <div id="chart-container" class="hidden bg-gray-50 p-4 rounded-lg shadow-inner mb-6 h-80">
                     <h3 class="text-xl font-bold text-gray-800 mb-4">月次プロジェクト別稼働推移</h3>
                     <canvas id="time-chart"></canvas>
                 </div>
 
+                <!-- 収支グラフ表示エリア -->
                 <div id="revenue-chart-container" class="hidden bg-gray-50 p-4 rounded-lg shadow-inner mb-6 h-80">
                     <h3 class="text-xl font-bold text-gray-800 mb-4">月次プロジェクト別収支推移</h3>
                     <canvas id="revenue-chart"></canvas>
                 </div>
 
+                <!-- 全プロジェクト収支サマリーセクション -->
                 <div id="global-revenue-summary" class="p-6 sm:p-8 space-y-6 bg-white rounded-2xl shadow-lg mb-6 hidden">
-                    </div>
+                    <!-- JavaScriptで内容が動的に挿入されます -->
+                </div>
 
+                <!-- タブとコンテンツのコンテナ -->
                 <div id="summary-tabs-container" class="space-y-4">
                     <div role="tablist" id="project-tab-list" class="flex flex-wrap border-b border-gray-200 -mb-px">
-                        </div>
+                        <!-- プロジェクトタブがここに動的に挿入されます -->
+                    </div>
                     <div id="project-tab-content" class="mt-4">
+                        <!-- プロジェクトごとの稼働実績がここに動的に挿入されます -->
                         <p class="text-gray-500 text-center py-4">月を選択して「サマリーを読み込む」を押してください。</p>
                     </div>
                 </div>
@@ -70,6 +79,7 @@
         </main>
     </div>
 
+    <!-- 編集モーダル -->
     <div id="edit-timestamp-modal" class="fixed inset-0 bg-gray-600 bg-opacity50 flex items-center justify-center p-4 hidden">
         <div class="bg-white rounded-lg shadow-xl p-6 w-full max-w-md">
             <h3 class="text-xl font-bold mb-4">稼働実績を編集</h3>
@@ -91,6 +101,7 @@
                 </div>
                 <div class="flex justify-end space-x-3">
                     <button type="button" id="cancel-edit-timestamp" class="btn bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded">キャンセル</button>
+                    <!-- 編集モーダルの更新ボタンの色を統一 -->
                     <button type="submit" class="btn bg-main hover:bg-main-dark text-white font-bold py-2 px-4 rounded">更新</button>
                 </div>
             </form>
@@ -98,6 +109,7 @@
         </div>
     </div>
 
+    <!-- 削除確認モーダル -->
     <div id="delete-confirm-modal" class="fixed inset-0 bg-gray-600 bg-opacity50 flex items-center justify-center p-4 hidden">
         <div class="bg-white rounded-lg shadow-xl p-6 w-full max-w-sm">
             <h3 class="text-xl font-bold mb-4">稼働実績を削除</h3>
@@ -110,7 +122,9 @@
         </div>
     </div>
     
+    <!-- html2pdf.js ライブラリを読み込み -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <!-- Chart.js ライブラリを読み込み -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script type="module">
@@ -803,7 +817,7 @@
 
             const selectedMonth = summaryMonthInput.value; //YYYY-MM
 
-            // PDFに含めるコンテンツを構築 (デバッグ用に最小限のHTMLに変更)
+            // PDFに含めるコンテンツを構築 (元のHTMLコンテンツに戻す)
             const pdfContentHtml = `
                 <style>
                     /* PDF用の最小限のスタイル */
@@ -824,54 +838,70 @@
                     .header-title { font-size: 24px; font-weight: bold; margin-bottom: 10px; text-align: center; }
                     .project-info { font-size: 18px; font-weight: bold; margin-bottom: 5px; text-align: center; }
                     .total-time { font-size: 18px; font-weight: bold; margin-bottom: 20px; text-align: center; }
-                    /* 以下はデバッグ用に一時的に削除またはコメントアウト */
-                    /* table {
+                    table {
                         width: 100%;
                         border-collapse: collapse;
                         margin-top: 15px;
                         font-size: 14px;
-                        table-layout: fixed;
+                        table-layout: fixed; /* テーブルレイアウトを固定 */
                     }
                     th, td {
-                        border: 1px solid #ccc;
+                        border: 1px solid #ccc; /* 薄いグレーの罫線 */
                         padding: 8px;
                         text-align: left;
-                        word-wrap: break-word;
+                        word-wrap: break-word; /* 長いテキストの折り返し */
                     }
                     th {
-                        background-color: #f5f5f5;
+                        background-color: #f5f5f5; /* ヘッダーの背景色 */
                         font-weight: bold;
                     }
-                    .text-right { text-align: right; } */
+                    .text-right { text-align: right; }
                 </style>
                 <div class="pdf-container">
                     <div class="text-center">
-                        <h2 class="header-title">Hello PDF!</h2>
-                        <p class="project-info">Project: ${activeProjectName} (${projectCode})</p>
-                        <p class="total-time">Total Hours: ${totalProjectHours.toFixed(2)}</p>
+                        <h2 class="header-title">${selectedMonth} 稼働時間報告書</h2>
+                        <p class="project-info">${activeProjectName} (${projectCode})</p>
+                        <p class="total-time">合計稼働時間: ${totalProjectHours.toFixed(2)} 時間</p>
                     </div>
-                    </div>
+
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>日付</th>
+                                <th>稼働時間</th>
+                                <th class="text-right">時間(h)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            ${projectTimestamps.sort((a, b) => a.clockInTime.toDate() - b.clockInTime.toDate()).map(ts => {
+                                const clockIn = ts.clockInTime.toDate();
+                                const clockOut = ts.clockOutTime.toDate();
+                                const duration = ts.durationHours || ((clockOut.getTime() - clockIn.getTime()) / 3600000);
+                                return `
+                                    <tr>
+                                        <td>${clockIn.toLocaleDateString('ja-JP', { year: 'numeric', month: 'numeric', day: 'numeric' })}</td>
+                                        <td>${clockIn.toLocaleTimeString('ja-JP', { hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: false })} - ${clockOut.toLocaleTimeString('ja-JP', { hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: false })}</td>
+                                        <td class="text-right">${duration.toFixed(2)}</td>
+                                    </tr>
+                                `;
+                            }).join('')}
+                        </tbody>
+                    </table>
+                </div>
             `;
 
             console.log("PDF Content HTML:", pdfContentHtml); // デバッグ用にHTML内容を出力
 
-            // Create a temporary iframe for PDF rendering
-            const iframe = document.createElement('iframe');
-            // ★変更点: デバッグのためにiframeを画面内に表示
-            iframe.style.position = 'fixed'; // fixedにすることでスクロールしても画面内に残る
-            iframe.style.top = '0px'; 
-            iframe.style.left = '0px'; 
-            iframe.style.width = '400px'; // デバッグしやすいように固定サイズ
-            iframe.style.height = '300px'; // デバッグしやすいように固定サイズ
-            iframe.style.border = '2px solid blue'; // Debug border for the iframe itself
-            iframe.style.backgroundColor = 'white';
-            iframe.style.zIndex = '9999'; // 最前面に表示
-            iframe.style.opacity = '1'; // 透明度をなくす
-            document.body.appendChild(iframe);
-            console.log("generateSummaryPdf: iframe作成・DOM追加完了 (デバッグ表示中)");
-
-            // Get the iframe's document
-            const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+            // ★変更点: iframeではなく、非表示のdivを生成してそこにコンテンツを配置する
+            const tempDiv = document.createElement('div');
+            tempDiv.style.position = 'absolute';
+            tempDiv.style.left = '-9999px'; // 画面外に配置
+            tempDiv.style.width = '210mm'; // A4幅
+            tempDiv.style.height = '297mm'; // A4高さ
+            tempDiv.style.overflow = 'hidden'; // はみ出しを隠す
+            tempDiv.style.backgroundColor = 'white'; // 背景色を白に
+            document.body.appendChild(tempDiv);
+            console.log("generateSummaryPdf: 非表示のdiv作成・DOM追加完了");
 
             // PDF生成オプションを定義
             const pdfOptions = {
@@ -889,47 +919,15 @@
             console.log("generateSummaryPdf: pdfOptions定義完了");
 
             try {
-                // Write the HTML content into the iframe's body
-                iframeDoc.body.innerHTML = pdfContentHtml;
-                console.log("generateSummaryPdf: iframe内にHTMLコンテンツ注入完了");
-                console.log("iframeDoc.body.innerHTML (注入後):", iframeDoc.body.innerHTML);
+                // 非表示のdivにHTMLコンテンツを注入
+                tempDiv.innerHTML = pdfContentHtml;
+                console.log("generateSummaryPdf: 非表示div内にHTMLコンテンツ注入完了");
+                console.log("tempDiv.innerHTML (注入後):", tempDiv.innerHTML);
 
-
-                // Wait for the iframe content to load and render
-                await new Promise(resolve => {
-                    // Use iframe load event for initial content load
-                    iframe.onload = () => {
-                        console.log("generateSummaryPdf: iframe onloadイベント発生");
-                        // Then use requestAnimationFrame twice to ensure rendering is complete
-                        requestAnimationFrame(() => {
-                            console.log("generateSummaryPdf: requestAnimationFrame 1回目");
-                            requestAnimationFrame(() => {
-                                console.log("generateSummaryPdf: requestAnimationFrame 2回目");
-                                setTimeout(() => {
-                                    console.log("generateSummaryPdf: setTimeout 50ms 経過");
-                                    resolve();
-                                }, 50); // 短いsetTimeoutを追加
-                            });
-                        });
-                    };
-                    // If iframe is already loaded (e.g., due to quick execution), resolve immediately
-                    if (iframe.contentWindow.document.readyState === 'complete') {
-                        console.log("generateSummaryPdf: iframe readyStateがcomplete");
-                        requestAnimationFrame(() => {
-                            requestAnimationFrame(() => {
-                                setTimeout(() => {
-                                    resolve();
-                                }, 50);
-                            });
-                        });
-                    }
-                });
-                console.log("generateSummaryPdf: iframeコンテンツのレンダリング待ち完了");
-
-                // Now, capture the content from within the iframe
-                const pdfContainer = iframeDoc.querySelector('.pdf-container');
+                // html2pdfで非表示のdivをキャプチャ
+                const pdfContainer = tempDiv.querySelector('.pdf-container');
                 if (!pdfContainer) {
-                    throw new Error("iframe内に.pdf-containerが見つかりませんでした。");
+                    throw new Error("一時的なdiv内に.pdf-containerが見つかりませんでした。");
                 }
                 console.log("generateSummaryPdf: .pdf-container要素取得完了", pdfContainer);
 
@@ -941,10 +939,10 @@
                 console.error("PDF生成中にエラーが発生しました:", error);
                 showStatus(`PDFの生成中にエラーが発生しました: ${error.message}。コンソールを確認してください。`, true, 'summary-status');
             } finally {
-                // Clean up: remove the iframe from the DOM
-                if (iframe.parentNode) {
-                    iframe.parentNode.removeChild(iframe);
-                    console.log("generateSummaryPdf: iframe削除完了");
+                // Clean up: remove the temporary div from the DOM
+                if (tempDiv.parentNode) {
+                    tempDiv.parentNode.removeChild(tempDiv);
+                    console.log("generateSummaryPdf: 非表示div削除完了");
                 }
             }
         }
